Add ability to clear all vector to free space
